pretty much added a database, a functional check-in system, deleted unnecessary files, uhm... that's it ig, maybe more stuff i forgor to mention

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Flask-SocketIO Demo</title>
-  <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <title>Flask-SocketIO Demo</title>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 </head>
 <body>
-  <h2>Messages:</h2>
-  <div id="messages"></div>
+<h2>Messages:</h2>
+<div id="messages"></div>
+<img src="/images/mel/image.png" alt="My Image">
 
-  <script>
+<script>
+
     var socket = io();
 
-    socket.on("new_message", function(msg) {
-      let div = document.getElementById("messages");
-      let p = document.createElement("p");
-      p.textContent = msg;
-      div.appendChild(p);
+    socket.on("new_message", function (msg) {
+        let div = document.getElementById("messages");
+        let p = document.createElement("p");
+        p.textContent = msg;
+        div.appendChild(p);
     });
-  </script>
+
+</script>
+
 </body>
 </html>
